Proceso de modificación MVC, queda en visualización por defecto y despliegue lista

--- a/html/main.html
+++ b/html/main.html
@@ -54,7 +54,7 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-5 align-self-center">
-                            <img id="imgPop" src="../img/rest1.png" />
+                            <img id="imgPop" class="imgPopModal" src="../img/rest1.png" />
                         </div>
                      </div>
                      <div>
@@ -81,6 +81,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBr7rf7pj2HwtQIjOwvMfD3BxRqEKqGeqE&libraries=places"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/controlador.js"></script>
+    <script type="text/javascript" src="../js/vista.js"></script>
+
 </body>
 </html>
