--- a/html/main.html
+++ b/html/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,29 +35,29 @@
                 </div>
             </div>
         </div>
-        <div class="row listRest" >
+        <div class="row listRest">
             <div id="lugares" class="container ">
-            </div>  
-        </div>      
+            </div>
+        </div>
     </div>
 
-      <!-- Modal -->
-      <div class="modal fade" id="restaurantInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
+    <!-- Modal -->
+    <div class="modal fade" id="restaurantInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="restaurantInfoTitle">Titulo</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                    <h5 class="modal-title" id="restaurantInfoTitle">Titulo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-5 align-self-center">
                             <img id="imgPop" class="imgPopModal" src="../img/rest1.png" />
                         </div>
-                     </div>
-                     <div>
+                    </div>
+                    <div>
                         <div class="col-12">
                             <div class="row">
                                 <span id="direccionPop"></span>
@@ -73,16 +73,16 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-warning" data-dismiss="modal">Pedir ahora</button>
                     </div>
-                </div>  
-              </div>
+                </div>
             </div>
-          </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBr7rf7pj2HwtQIjOwvMfD3BxRqEKqGeqE&libraries=places"></script>
+    <script type="text/javascript" src="../js/modelo.js"></script>
     <script type="text/javascript" src="../js/controlador.js"></script>
     <script type="text/javascript" src="../js/vista.js"></script>
-
 </body>
 </html>
